// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContactMePage /> <ContactMePage /> should render its UserMessageBody closed 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "injectedReducers": Object {},
      "injectedSagas": Object {},
      "replaceReducer": [Function],
      "runSaga": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }
>
  <ContactMePage
    messageStatus="closed"
    submitMessageForm={[MockFunction]}
  >
    <HeaderBar
      header="Contact Me"
      subMessage="Feel free to send me a message and i will get back to you"
    >
      <div
        className="jumbotron"
      >
        <h1>
          Contact Me
        </h1>
        <p>
          Feel free to send me a message and i will get back to you
        </p>
      </div>
    </HeaderBar>
    <ContactBody
      messageStatus="closed"
      submitMessageForm={[MockFunction]}
    >
      <div
        className="messageForm"
      >
        <input
          className="input"
          id="emailInput"
          placeholder="Your Email"
          type="email"
        />
        <input
          className="input"
          id="subjectInput"
          placeholder="Subject"
          type="text"
        />
        <textarea
          className="inputLargeText"
          id="messageInput"
          placeholder="Your Message"
          type="text"
        />
        <div
          className="actionContainer"
        >
          <BasicButton
            className="button"
            id="clear"
            onClick={[Function]}
          >
            <div
              className="button"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              Clear
            </div>
          </BasicButton>
          <BasicButton
            className="button"
            id="submit"
            onClick={[Function]}
          >
            <div
              className="button"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              Submit
            </div>
          </BasicButton>
        </div>
      </div>
    </ContactBody>
  </ContactMePage>
</Provider>
`;

exports[`<ContactMePage /> <ContactMePage /> should render its UserMessageBody succeeded 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "injectedReducers": Object {},
      "injectedSagas": Object {},
      "replaceReducer": [Function],
      "runSaga": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }
>
  <ContactMePage
    messageStatus="succeeded"
    submitMessageForm={[MockFunction]}
  >
    <HeaderBar
      header="Contact Me"
      subMessage="Feel free to send me a message and i will get back to you"
    >
      <div
        className="jumbotron"
      >
        <h1>
          Contact Me
        </h1>
        <p>
          Feel free to send me a message and i will get back to you
        </p>
      </div>
    </HeaderBar>
    <Expire
      delay={1500}
      messageStatus="succeeded"
      submitMessageForm={[MockFunction]}
    >
      <div>
        <ResultBanner
          message="Message Sent"
          resultClass="succeeded"
        >
          <div
            className="grayOut"
          >
            <div
              className="succeeded"
            >
              Message Sent
            </div>
          </div>
        </ResultBanner>
      </div>
    </Expire>
    <ContactBody
      messageStatus="succeeded"
      submitMessageForm={[MockFunction]}
    >
      <div
        className="messageForm"
      >
        <input
          className="input"
          id="emailInput"
          placeholder="Your Email"
          type="email"
        />
        <input
          className="input"
          id="subjectInput"
          placeholder="Subject"
          type="text"
        />
        <textarea
          className="inputLargeText"
          id="messageInput"
          placeholder="Your Message"
          type="text"
        />
        <div
          className="actionContainer"
        >
          <BasicButton
            className="button"
            id="clear"
            onClick={[Function]}
          >
            <div
              className="button"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              Clear
            </div>
          </BasicButton>
          <BasicButton
            className="button"
            id="submit"
            onClick={[Function]}
          >
            <div
              className="button"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              Submit
            </div>
          </BasicButton>
        </div>
      </div>
    </ContactBody>
  </ContactMePage>
</Provider>
`;
